--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,19 @@
 body {
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
     background-image: url(/images/background_forest.jpg);
-    background-size: 100%;
+    background-size: cover;
     background-attachment: fixed;
-    height: 100%;
-    margin: auto;
-}
-
-.mainbox {
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
+    align-items: center;
     direction: column;
+    width: 100%;
+    height: 100vh;
+}
+/* Is this okay or should i have a container to put the body things in? */
+.form {
     background-color: #ffce03;
-    height: 100%;
     width: 380px;
     border-style: outset;
     border-color: red;
@@ -22,9 +21,11 @@ body {
     border-radius: 5px;
     padding: 20px;
 }
-.mainbox button {
-    background-color: #fd9a01;
+.form button {
+    background-color: #ffce03;
     border-color: red;
+    font-size: large;
+    font-family: 'Bungee Spice', cursive;
     width: 180px;
     height: 30px;
     margin-top: 10px;
@@ -36,10 +37,11 @@ body {
     text-align: center;
     font-family: 'Bungee Spice', cursive;
 }
+
 .form-in {
     background-color: #fd9a01;
-    border: none;
-    width: 360px;
-    padding: 5px;
+    border-color: red;
+    width: 350px;
+    padding: 10px;
     margin: 5px;
 }
